Repaired navbar/image formatting on small widths

--- a/static/main.css
+++ b/static/main.css
@@ -7,9 +7,16 @@
 body {
   display: flex;
   flex-direction: column;
+  width: 100%;
   height: 100vh;
   background: #fafafa;
   color: #333333;
+}
+
+@media (max-width: 768px) {
+  .custom-navbar-brand {
+      margin-left: 15px; /* Adjust the value as necessary */
+  }
 }
 
 h1 {
@@ -369,6 +376,9 @@ footer {
   background-image: var(--homeimage);
   height: 345px;
   margin-top: 55px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center top;
 }
 
 @media (max-width: 767px) {
@@ -426,9 +436,17 @@ footer {
 .image-card {
   position: absolute;
   opacity: .95;
-  top: calc(50% - 35px);
-  left: calc(50% - 185px);
-  width: 23rem;
+  top: 50%;
+  left: 50%;
+  width: 90%;
+  max-width: 23rem;
+  transform: translate(-50%, -50%);
+}
+
+@media (max-width: 375px) {
+  .image-card h1 {
+      font-size: 24px; /* or any appropriate size */
+  }
 }
 
 .card-header {
